--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<h1>super work in progress lol</h1>
+<html><head>
+        <title>Melody's Corner</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" type="text/css" href="files/style.css">
+        <link rel="shortcut icon" href="favicon.ico">
+    </head>
+
+    <body>
+		<a id="sidebar-character"><br><br>Play Arknights</a>
+		<a id="lappland"></a>
+		<a id="left-bottom-flag"></a>
+		<a id="right-bottom-flag"></a>
+        <main>
+			<header></header>
+			<content parent="main-card">
+				<navigation>
+					<a id="s-tumblr" href="https://melodylux.tumblr.com"></a><h3>Tumblr</h3>
+					<a id="s-discord" href="https://discord.gg/NSt37K7"></a><h3>Discord</h3>
+					<a id="s-silverport" href="https://www.silverportreborn.com"></a><h3>Silverport</h3>
+					<a id="s-steam" href="https://steamcommunity.com/id/melodylux/"></a><h3>Steam</h3>
+					<a id="s-github" href="https://github.com/M10327"></a><h3>Github</h3>
+					</navigation>
+				<cards>
+					<card>
+						<h1>Hi, I'm Melody!</h1>
+						<p>Welcome to the website! I made this as a little hobby project and a chance to learn a bit of html/css. Not really interested in making a job out of it or anything but yeah.</p>
+						<p>There's not much here right now, but feel free to click around!</p>
+					</card>
+					<card>
+						<h1>Info</h1>
+						<p>Names: Melody and Ashley
+						<br>Pronouns: exclusively she/her
+						<br>Age: I'm an adult.
+						<br>I know C# and very basic blender and unity usage. Not that great at making stuff but I mostly do hobby projects and stuff for Silverport right now.</p>
+					</card>
+				</cards>
+			</content>
+		</main>
+        <foot>
+			<footer-text> </footer-text>
+		</foot>
+		
+	</body>
+
+</html>
