--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 				<cards>
 					<card>
 						<h1>Hi, I'm Melody!</h1>
-						<p>Welcome to the website! I made this as a little hobby project and a chance to learn a bit of html/css. Not really interested in making a job out of it or anything but yeah.</p>
+						<p>Welcome to the website! I made this as a little hobby project and a chance to learn a bit of html/css.</p>
 						<p>There's not much here right now, but feel free to click around!</p>
 					</card>
 					<card>
 						<h1>Info</h1>
 						<p>Names: Melody and Ashley
-						<br>Pronouns: exclusively she/her
+						<br>Pronouns: she/her and it/its
 						<br>Age: I'm an adult.
 						<br>I know C# and very basic blender and unity usage. Not that great at making stuff but I mostly do hobby projects and stuff for Silverport right now.</p>
 					</card>
