--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
 					<card>
 						<h1>Hi, I'm Melody!</h1>
 						<p>Welcome to the website! I made this as a little hobby project and a chance to learn a bit of html/css.</p>
-						<p>There's not much here right now, but feel free to click around!</p>
 					</card>
 					<card>
-						<h1>Info</h1>
+						<h1>About Me</h1>
 						<p>Names: Melody and Ashley
 						<br>Pronouns: she/her and it/its
-						<br>Age: I'm an adult.
-						<br>I know C# and very basic blender and unity usage. Not that great at making stuff but I mostly do hobby projects and stuff for Silverport right now.</p>
+						<br>Even when referring to me by it/its please use feminine gendered terms. (for example: sister > sibling)
+						<br>Age: Over 21</p>
+					</card>
+					<card>
+						<h1>Interests</h1>
+						<p>I enjoy coding. I primarily use C# but have some experience with java and python.
+						<br>Currently into Genshin, Arknights, and Warframe. Always looking for people to play/talk about Warframe with.</p>
 					</card>
 				</cards>
 			</content>
