--- a/index.html
+++ b/index.html
@@ -1,49 +1,135 @@
 <html><head>
-        <title>Melody's Corner</title>
+        <title>Melody's Terminal</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="files/style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="radio.css">
+        <link rel="stylesheet" type="text/css" href="diagnostics.css">
+        <link rel="stylesheet" type="text/css" href="memory.css">
         <link rel="shortcut icon" href="favicon.ico">
     </head>
 
     <body>
-		<a id="sidebar-character"><br><br>Play Arknights</a>
-		<a id="lappland"></a>
-		<a id="left-bottom-flag"></a>
-		<a id="right-bottom-flag"></a>
-        <main>
-			<header></header>
-			<content parent="main-card">
-				<navigation>
-					<a id="s-tumblr" href="https://melodylux.tumblr.com"></a><h3>Tumblr</h3>
-					<a id="s-discord" href="https://discord.gg/NSt37K7"></a><h3>Discord</h3>
-					<a id="s-silverport" href="https://www.silverportreborn.com"></a><h3>Silverport</h3>
-					<a id="s-steam" href="https://steamcommunity.com/id/melodylux/"></a><h3>Steam</h3>
-					<a id="s-github" href="https://github.com/M10327"></a><h3>Github</h3>
-					</navigation>
-				<cards>
-					<card>
-						<h1>Hi, I'm Melody!</h1>
-						<p>Welcome to the website! I made this as a little hobby project and a chance to learn a bit of html/css.</p>
-					</card>
-					<card>
-						<h1>About Me</h1>
-						<p>Names: Melody and Ashley
-						<br>Pronouns: she/her and it/its
-						<br>Even when referring to me by it/its please use feminine gendered terms. (for example: sister > sibling)
-						<br>Age: Over 21</p>
-					</card>
-					<card>
-						<h1>Interests</h1>
-						<p>I enjoy coding. I primarily use C# but have some experience with java and python.
-						<br>Currently into Genshin, Arknights, and Warframe. Always looking for people to play/talk about Warframe with.</p>
-					</card>
-				</cards>
-			</content>
-		</main>
-        <foot>
-			<footer-text> </footer-text>
-		</foot>
-		
+        <div class="flex-container">
+			<div class="box" style="width: 30%;">
+				<div class="title" style="width: 290px;">Reciever</div>
+				<div class="freq-grid">
+					<div class="freq-side">FREQ</div>
+					<div class="freq-center">
+						<div style="transform: scaleX(0.8);">176.000</div>
+					</div>
+					<div class="freq-side">KHZ</div>
+				</div>
+				<div class="radio-master" style="height: 40%;">
+					<div class="center">
+						<div class="radio-tags">
+							<div class="tag">TUNER</div>
+							<div class="tag">WELLE</div>
+							<div class="tag" style="border-color: #3f3f3f; box-shadow: inset 0px 0px 0px 1px #3f3f3f; color: #3f3f3f;">ATT</div>
+							<div class="tag">BURST</div>
+							<div class="tag" style="border-color: #3f3f3f; box-shadow: inset 0px 0px 0px 1px #3f3f3f; color: #3f3f3f;">TEST</div>
+							<div class="tag">SIGNAL</div>
+							<div class="tag">DATA</div>
+						</div>
+						<img src="radio.png" style="width:65%; height:65%; margin: 0px 20px 0px -10px"></img>
+					</div>
+				</div>
+				<div class="radio-master" style="height: 45%;">
+					<div class="radio-bottom-title">EXTERNAL LINKS</div>
+					<div class="radio-bottom">
+						<a href="https://discord.gg/NSt37K7" style="color: #ffffff;">DISCORD SERVER</a>
+						<br><a href="https://steamcommunity.com/id/melodylux/" style="color: #ffffff;">STEAM</a>
+						<br><a href="https://melodylux.tumblr.com/" style="color: #ffffff;">TUMBLR</a>
+						<br><a href="https://github.com/M10327" style="color: #ffffff;">GITHUB</a>
+						<br><a href="https://www.silverportreborn.com/" style="color: #ffffff;">SILVERPORT</a>
+					</div>
+				</div>
+				<div class="radio-master"></div>
+			</div>
+			<div class="box">
+				<div class="title" style="width: 290px;">Memory</div>
+				<div id="mem-box" class="mem-box">
+					<span class="mem-close">X </span>
+					<div id="mem-header" class="mem-header">HEADER</div>
+					<div id="mem-text" class="mem-text">WORDS</div>
+				</div>
+				<div id="memBio" class="mem-entry">Expanded Bio</div>
+				<div id="memInt" class="mem-entry">Interests</div>
+				<div id="memCre" class="mem-entry">Credits</div>
+			</div>
+			<div class="box" style="width: 40%;">
+				<div class="title" style="width: 290px;">Diagnostics</div>
+				<div class="diag-master" style="height: 420px; margin-bottom: 25px;">
+					<div class="hexagon">
+						<div></div>
+						<div></div>
+						<div></div>
+						<div class= "hex-boxtext">HYPERSENSITIVE</div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div style= "border-width: 3px; border-style: dashed; border-color: #3f3f3f;"></div>
+						<div style= "background-color:cc3500;"></div>
+						<div class= "hex-boxtext" style= "writing-mode:vertical-rl;">OVERCLUSTERED</div>
+						<div class="hex-image">
+							<img src="hexagon.png" style="max-width:100%; max-height:100%; margin: auto;"></img>
+							<div class="bottom-left">SYSTEM-<br>SYCHOGRAMM</div>
+							<div class="top-left">F=2.3<br>N=7.1</div>
+							<div class="top-right">■</div>
+							<div class="bottom-right">5.6.1</div>
+						</div>
+						<div class= "hex-boxtext" style= "writing-mode:vertical-rl;">FRAGMENTED</div>
+						<div style= "background-color:cc3500;"></div>
+						<div style= "border-width: 3px; border-style: dashed; border-color: #3f3f3f;"></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div class= "hex-boxtext">CATATONIC</div>
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+				<div class="diag-master" style="display: flex; flex-wrap: nowrap">
+					<div class="status-tray">
+						<img class="status-icon" src="status-icons/eye.png"></img>
+						<img class="status-icon" src="status-icons/plus.png"></img>
+						<img class="status-icon" src="status-icons/wave.png"></img>
+						<img class="status-icon" src="status-icons/split.png"></img>
+						<img class="status-icon" src="status-icons/hand.png"></img>
+						<img class="status-icon" src="status-icons/snowflake.png"></img>
+						<img class="status-icon" src="status-icons/person.png"></img>
+						<img class="status-icon" src="status-icons/tower.png"></img>
+					</div>
+					<div style="width:80%; height: 280px;">
+						<div class="status-title">Status</div>
+						<img src="Nominal.png"></img>
+						<div style="display: flex; flex-wrap: nowrap;">
+							<div class="status-bars">
+								<div class="status-bartext">K°</div>
+								<div class="status-bar">■■■■■■<font color="3f3f3f">■■■■■■■■■■■■■■■■■  ■</font></div>
+								<div class="status-bartext">ATA</div>
+								<div class="status-bar">■■■■■■■■■■■■■■■■■■■<font color="3f3f3f">■■■■  ■</font></div>
+								<div class="status-bartext">%T</div>
+								<div class="status-bar">■■<font color="3f3f3f">■■■■■■■■■■■■■■■■■■■■■  ■</font></div>
+								<div class="status-bartext">P</div>
+								<div class="status-bar">■■■■■■■■■■■■■<font color="3f3f3f">■■■■■■■■■■  ■</font></div>
+								<div class="status-bartext">NP</div>
+								<div class="status-bar">■■■■■■■<font color="3f3f3f">■■■■■■■■■■■■■■■■  ■</font></div>
+							</div>
+							<img src="LSTR.png" style="width:30%; height:30%; align: right; margin-top: 20px;"></img>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="flex-container-bottom">
+			<div class="box2" style="text-align: left; color: #3f3f3f; width: 30%;">GENERATION <font color="#cc3500">5</font><br>LANDVERMESSUNGS-/<br>SCHIFF-TECHNIKER<br>REPLIKA</div>
+			<div class="box2" style="width: 40%; font-size=40px;">
+				<div id="current-time" style="font-size=40px;"></div>
+				<script src="time.js"></script>
+			</div>
+			<div class="box2" style="text-align: right; color: #3f3f3f; width: 40%;"><br>V.5.6.1</div>
+		</div>
+	<script src="memory.js"></script>
 	</body>
-
 </html>
