doctype html added, many fixes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html><head>
         <title>Melody's Terminal</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -39,7 +40,7 @@
 							<img src="radio/radio-bar.png" style="width:100%; margin:auto;"></img>
 							<img src="radio/right.png" class="rad-button" id="rad-button-freq-right" style="z-index: 1;"></img>
 							<div id="rad-bars" class="rad-bars"></div>
-							<div id="radio-selectorline" style="color:#ffffff; margin-top:-60px;">|</div>
+							<div id="radio-selectorline" style="color:#ffffff; margin-top:-27px; line-height:12px;">|</div>
 							<div></div>
 							<div style="line-height:15px; margin-top:-85px; margin-left:18px; color:#3f3f3f;">FFT</div>
 							<div></div>
@@ -93,7 +94,7 @@
 						<div></div>
 						<div></div>
 						<div style= "border-width: 3px; border-style: dashed; border-color: #3f3f3f;"></div>
-						<div style= "background-color:cc3500;"></div>
+						<div style= "background-color: #cc3500;"></div>
 						<div class= "hex-boxtext" style= "writing-mode:vertical-rl;">OVERCLUSTERED</div>
 						<div class="hex-image">
 							<img src="hexagon.png" style="max-width:100%; max-height:100%; margin: auto;"></img>
@@ -103,7 +104,7 @@
 							<div class="bottom-right">5.6.1</div>
 						</div>
 						<div class= "hex-boxtext" style= "writing-mode:vertical-rl;">FRAGMENTED</div>
-						<div style= "background-color:cc3500;"></div>
+						<div style= "background-color: #cc3500;"></div>
 						<div style= "border-width: 3px; border-style: dashed; border-color: #3f3f3f;"></div>
 						<div></div>
 						<div></div>
@@ -127,8 +128,8 @@
 					</div>
 					<div style="width:80%; height: 280px;">
 						<div class="status-title">Status</div>
-						<img src="Nominal.png"></img>
-						<div style="display: flex; flex-wrap: nowrap;">
+						<img src="Nominal.png" style="line-height:0px;"></img>
+						<div style="display: flex; flex-wrap: nowrap; margin-top:25px;">
 							<div class="status-bars">
 								<div class="status-bartext">K°</div>
 								<div class="status-bar">■■■■■■<font color="3f3f3f">■■■■■■■■■■■■■■■■■  ■</font></div>
@@ -141,7 +142,7 @@
 								<div class="status-bartext">NP</div>
 								<div class="status-bar">■■■■■■■<font color="3f3f3f">■■■■■■■■■■■■■■■■  ■</font></div>
 							</div>
-							<img src="LSTR.png" style="width:30%; height:30%; align: right; margin-top: 20px;"></img>
+							<img src="LSTR.png" style="width:30%; height:30%; align: right; margin-top:-10px;"></img>
 						</div>
 					</div>
 				</div>
