diagnostic dot location is randomized

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 						<div style= "background-color: #cc3500;"></div>
 						<div class= "hex-boxtext" style= "writing-mode:vertical-rl;">OVERCLUSTERED</div>
 						<div class="hex-image">
+							<img id="diagnostics-dot" class="diagnostics-dot" src="dot.png"></img>
 							<img src="hexagon.png" style="max-width:100%; max-height:100%; margin: auto;"></img>
 							<div class="bottom-left">SYSTEM-<br>SYCHOGRAMM</div>
 							<div class="top-left">F=2.3<br>N=7.1</div>
@@ -158,5 +159,6 @@
 		</div>
 	<script src="memory.js"></script>
 	<script src="radio.js"></script>
+	<script src="diagnostics.js"></script>
 	</body>
 </html>
