external links change color on hover

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 				<div class="radio-master" style="height: 45%;">
 					<div class="radio-bottom-title">EXTERNAL LINKS</div>
 					<div class="radio-bottom">
-						<a href="https://discord.gg/NSt37K7" style="color: #ffffff;">DISCORD SERVER</a>
-						<br><a href="https://steamcommunity.com/id/melodylux/" style="color: #ffffff;">STEAM</a>
-						<br><a href="https://melodylux.tumblr.com/" style="color: #ffffff;">TUMBLR</a>
-						<br><a href="https://github.com/M10327" style="color: #ffffff;">GITHUB</a>
-						<br><a href="https://www.silverportreborn.com/" style="color: #ffffff;">SILVERPORT</a>
+						<a class="external-link" href="https://discord.gg/NSt37K7">DISCORD SERVER</a>
+						<br><a class="external-link" href="https://steamcommunity.com/id/melodylux/">STEAM</a>
+						<br><a class="external-link" href="https://melodylux.tumblr.com/">TUMBLR</a>
+						<br><a class="external-link" href="https://github.com/M10327">GITHUB</a>
+						<br><a class="external-link" href="https://www.silverportreborn.com/">SILVERPORT</a>
 					</div>
 				</div>
 				<div class="radio-master"></div>
