radio buttons change color on hover

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 							<div></div>
 							<img src="radio/radio-numbers.png" style="width:100%;"></img>
 							<div></div>
-							<img src="radio/left.png" class="rad-button" id="rad-button-freq-left" style="z-index: 1;"></img>
+							<img src="radio/left.png" class="rad-button-top" id="rad-button-freq-left"></img>
 							<img src="radio/radio-bar.png" style="width:100%; margin:auto;"></img>
-							<img src="radio/right.png" class="rad-button" id="rad-button-freq-right" style="z-index: 1;"></img>
+							<img src="radio/right.png" class="rad-button-top" id="rad-button-freq-right"></img>
 							<div id="rad-bars" class="rad-bars"></div>
 							<div id="radio-selectorline" style="color:#ffffff; margin-top:-27px; line-height:12px;">|</div>
 							<div></div>
@@ -47,11 +47,11 @@
 							<div style="line-height:15px; margin-top:-84px; margin-left:-60px; color:#3f3f3f; font-size: 15px; letter-spacing: -3px">▇▇▇</div>
 							<div></div>
 							<div class="rad-buttons">
-								<img src="radio/play.png" id="rad-button-play" style="margin:auto; z-index: 1;" class="rad-button"></img>
-								<img src="radio/pause.png" id="rad-button-pause" style="margin:auto; z-index: 1;" class="rad-button"></img>
-								<img src="radio/up2.png" id="rad-button-volup" style="margin:auto; z-index: 1;" class="rad-button""></img>
+								<img src="radio/play.png" id="rad-button-play" class="rad-button-bottom"></img>
+								<img src="radio/pause.png" id="rad-button-pause" class="rad-button-bottom"></img>
+								<img src="radio/up2.png" id="rad-button-volup" class="rad-button-bottom"></img>
 								<div id="volume" style="color:#3f3f3f; line-height:15px; margin:auto; font-size:30px;">50</div>
-								<img src="radio/down2.png" id="rad-button-voldown" style="margin:auto; z-index: 1;" class="rad-button""></img>
+								<img src="radio/down2.png" id="rad-button-voldown" class="rad-button-bottom"></img>
 								<img src="radio/circle.png" style="margin:auto;"></img>
 							</div>
 							<div></div>
