--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <html><head>
         <title>FATAL ERROR</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="404.css">
+        <link rel="stylesheet" type="text/css" href="css/404.css">
         <link rel="shortcut icon" href="favicon.ico">
     </head>
 
@@ -10,7 +10,7 @@
 		<div style="color: #ff0000; margin-top: 20px;">FATAL ERROR</div>
 		<br>
 		<div id="error-time" style="font-size=40px;"></div>
-		<script src="time2.js"></script>
+		<script src="js/time2.js"></script>
 		<div style="color: #ffffff;">IN LSTR-SYS-D930CE3B. THIS MAY BE CAUSED BY A HARDWARE FAILURE.</div>
 		<div style="color: #ffffff;">IF THIS PROBLEM PERSISTS, CONTACT A REPLIKA TECHNICAL SERVICE.</div>
 		<div style="color: #ffffff;">ERROR CODE ***STOP:6XDF951762 [LSTR-512]</div>
