Add warning for mobile users
Dont have the time nor do i want to figure out every bug with mobile, so im simply not supporting it

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <div class="content">
                         <div class="loginbuttons">
                             <div id="loginbuttonspacer" style="height: 100px;"></div>
+                            <p id="mobilewarning" style="text-align: center; margin: auto; margin-bottom: 30px;"></p>
                             <div id="loginNoMusic" class="loginbutton" onclick="Login(false)">Login w/o Music</div>
                             <div id="loginButton" class="loginbutton" onclick="Login(true)">Login</div>
-                            <div id="loginmobile" class="loginbutton" style="visibility: hidden;">Mobile Page</div>
                         </div>
                     </div>
                 </div>
@@ -189,6 +189,7 @@
     <script src="js/time.js"></script>
     <script src="js/taskbar.js"></script>
     <script src="js/video.js"></script>
+    <script src="js/mobilecheck.js"></script>
 </body>
 
 </html>
