added another bug
also updated todo

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                         <div class="close">x</div>
                     </div>
                     <div class="content">
+                        <p style="font-size:20px;">This one is a weevil</p>
+                        <img style="width:160px;" src="images/weevil.png"></img>
                         <ul>
                             <li>Taskbar display names bug out when hovering over the bottom few pixels</li>
                             <li>Click noise sometimes double plays, and more often when dragging a window causes your
@@ -109,6 +111,7 @@
                             <li>Allow resizing windows</li>
                             <li>Adjust windows position when opening so it doesnt perfectly overlap with another window (give it a slight offset)</li>
                             <li>Music player (preloaded songs and allow user upload if possible, though unsure how to save those)</li>
+                            <li>Slot machine</li>
                         </ul>
                     </div>
                 </div>
