--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
                             are often turned off)
                             <br><a href="https://discord.gg/NSt37K7">Discord Server</a>
                             <br><a href="https://steamcommunity.com/id/melodylux/">Steam Profile</a>
-                            <br><a href="https://melodylux.tumblr.com/">Tumblr</a>
                             <br><a href="https://github.com/M10327">Github</a>
                             <br><a href="https://www.silverportreborn.com/">Silverport Website</a>
                         </p>
@@ -117,8 +116,9 @@
                         <p style="font-size:25px; margin: auto; line-height:35px;">If you have a cool idea, I'd love to
                             hear suggestions through discord!<br>Current Ideas:</p>
                         <ul>
-                            <li>Cookies :D (and settings panel)</li>
+                            <li>Cookies :D</li>
                             <li>Background options</li>
+                            <li>Themes (needy streamer overload is first planned)</li>
                             <li>Desktop Pet</li>
                             <li>Allow resizing windows</li>
                             <li>Adjust windows position when opening so it doesnt perfectly overlap with another window (give it a slight offset)</li>
