--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <div id="information" class="window" style="width: 50%; height: 70%; left:25%">
                     <div class="headerbox">
                         <div class="headertext">Welcome User</div>
+                        <div class="share">➚</div>
                         <div class="close">x</div>
                     </div>
                     <div class="content">
@@ -50,6 +51,7 @@
                 <div id="settingswindow" class="window" style="width: 50%; height: 70%; left:26%; top:5%">
                     <div class="headerbox">
                         <div class="headertext">Settings</div>
+                        <div class="share">➚</div>
                         <div class="close">x</div>
                     </div>
                     <div class="content" style="font-size:35px; line-height: 70px;">
@@ -63,6 +65,7 @@
                 <div id="aboutcomputer" class="window" style="width: 50%; height: 70%; left:30%; top: 5%">
                     <div class="headerbox">
                         <div class="headertext">About Computer</div>
+                        <div class="share">➚</div>
                         <div class="close">x</div>
                     </div>
                     <div class="content">
@@ -81,6 +84,7 @@
                 <div id="contactsocials" class="window" style="width: 20%; height: 60%; left:79%; top: 3%">
                     <div class="headerbox">
                         <div class="headertext">Contact and Socials</div>
+                        <div class="share">➚</div>
                         <div class="close">x</div>
                     </div>
                     <div class="content">
@@ -96,6 +100,7 @@
                 <div id="knownbugs" class="window" style="width: 40%; height: 60%; left:29%; top: 4%">
                     <div class="headerbox">
                         <div class="headertext">Known Bugs</div>
+                        <div class="share">➚</div>
                         <div class="close">x</div>
                     </div>
                     <div class="content">
@@ -111,6 +116,7 @@
                 <div id="todolist" class="window" style="width: 40%; height: 60%; left:28%; top: 6%">
                     <div class="headerbox">
                         <div class="headertext">To Do</div>
+                        <div class="share">➚</div>
                         <div class="close">x</div>
                     </div>
                     <div class="content">
@@ -129,6 +135,7 @@
                 <div id="slotmachine" class="window" style="width: 544px; height: 542px; left:22%; top: 6%">
                     <div class="headerbox">
                         <div class="headertext">Slot Machine</div>
+                        <div class="share">➚</div>
                         <div class="close">x</div>
                     </div>
                     <div class="contentfull">
@@ -157,6 +164,7 @@
                 <div id="arknightsclears" class="window" style="width: 50%; height: 70%; left:24%; top: 8%">
                     <div class="headerbox">
                         <div class="headertext">Arknights Clears</div>
+                        <div class="share">➚</div>
                         <div class="close">x</div>
                     </div>
                     <div class="folderContainer">
@@ -217,6 +225,7 @@
                     <div class="desktoptitle">Lets Go Gambling!</div>
                 </div>
             </div>
+            <div class="trayNotification" id="trayNotification"></div>
         </div>
     </div>
     <script src="js/settings.js"></script>
