videos are now linkable

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                 <div id="videowindow" class="window" style="width: 1018px; height: 612px; left:25%">
                     <div class="headerbox">
                         <div class="headertext" id="videowindowheader"></div>
+                        <div class="share">➚</div>
                         <div class="close">x</div>
                     </div>
                     <div class="contentSingleVideo">
@@ -169,17 +170,17 @@
                     </div>
                     <div class="folderContainer">
                         <div id="ccb1" class="folderitem"
-                            onclick="OpenVideo('ccb1_clear.mp4', `Melody's Contingency Contract Pyrolysis 620 Risk Clear`)">
+                            onclick="OpenVideo('ccb1')">
                             <img class="folderimage" src="images/ccb1.png"></img>
                             <div class="foldertitle">CCB #1 Clear</div>
                         </div>
                         <div id="ccb2" class="folderitem"
-                            onclick="OpenVideo('ccb2_clear.mp4', `Melody's Contingency Contract Underdawn 750 Risk Clear`)">
+                            onclick="OpenVideo('ccb2')">
                             <img class="folderimage" src="images/ccb2.png"></img>
                             <div class="foldertitle">CCB #2 Clear</div>
                         </div>
                         <div id="pinchout" class="folderitem"
-                            onclick="OpenVideo('pinch_out_clear.mp4', `Melody's Pinch Out 540 Risk Clear`)">
+                            onclick="OpenVideo('pinchout')">
                             <img class="folderimage" src="images/pinch_out.png"></img>
                             <div class="foldertitle">Pinch Out Clear</div>
                         </div>
