--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>Melody's Pom-2 PC</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/globalvars.css">
+    <link rel="stylesheet" type="text/css" id="themeUrl" href="css/theme_1999.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/window.css">
     <link rel="stylesheet" type="text/css" href="css/login.css">
@@ -60,6 +62,7 @@
                             Volume:
                             <input id="volumeslider" type="range" min="1" max="100" value="30" class="volumeslider"></input>
                         </div>
+                        Style: <a onclick="SetStyle('1999', true)">[1999]</a> <a onclick="SetStyle('nso', true)">[NSO]</a>
                     </div>
                 </div>
                 <div id="aboutcomputer" class="window" style="width: 50%; height: 70%; left:30%; top: 5%">
@@ -73,12 +76,10 @@
                             made, and the most complex one by far. I've had to learn a good amount of javascript html
                             and css to put this together. I write everything from scratch in local files (first using
                             notepad++ and now using vs code), so I keep everything as basic as I can. This is currently
-                            just a hobby for me, as my main coding preference is with c#.<br><br>This design was heavily
+                            just a hobby for me, as my main coding preference is with c#.<br><br>This design and default theme were heavily
                             inspired by Warframe 1999. The background music, login sfx, and button clicks are all taken
                             from the game. I'm sure some icons look a little out of place, but I'm not exactly a graphic
-                            designer so I make due with what I can find online.<br><br>Hopefully it works as intended on
-                            all systems, but I'm not very good at making websites that properly scale with screens yet
-                            so I imagine it doesn't play well on mobile or weird resolutions.</p>
+                            designer so I make due with what I can find online.<br><br>Hopefully it works in other browsers. I only fully test it in firefox. (You should be using firefox btw)</p>
                     </div>
                 </div>
                 <div id="contactsocials" class="window" style="width: 20%; height: 60%; left:79%; top: 3%">
@@ -124,7 +125,7 @@
                             hear suggestions through discord!<br>Current Ideas:</p>
                         <ul>
                             <li>Background options</li>
-                            <li>Themes (needy streamer overload is first planned)</li>
+                            <li>Swap music and sfx with different themes</li>
                             <li>Desktop Pet</li>
                             <li>Allow resizing windows</li>
                             <li>Adjust windows position when opening so it doesnt perfectly overlap with another window (give it a slight offset)</li>
@@ -238,6 +239,7 @@
     <script src="js/video.js"></script>
     <script src="js/mobilecheck.js"></script>
     <script src="js/slotmachine.js"></script>
+    <script src="js/stylemanager.js"></script>
 </body>
 
 </html>
